@@ -184,6 +184,10 @@ Browsing state variables
 %(head)			The currently viewed 'head' ID. Defaults to HEAD
 %(commit)		The currently selected commit ID.
 %(blob)			The currently selected blob ID.
+%(directory)		The current directory path in the tree view; \
+			empty for the root directory.
+%(file)			The currently selected file.
+%(ref)			The reference given to blame or HEAD if undefined.
 ------------------------------------------------------------------------------
 
 As an example, the following external command will save the current commit as
